edit time via manageRidepat module V4
finish developing - before QA

--- a/Road to Recovery/pages/editTimeModal.html
+++ b/Road to Recovery/pages/editTimeModal.html
@@ -31,7 +31,7 @@
                 <br />  <br />
 
                 <label data-toggle="tooltip" title="afternoon">אחה"צ</label>
-                <input type="checkbox" id="editTimeAfterNoonCB" onchange="checkeditTimeAfterNoonCB()" />
+                <input type="checkbox" id="editTimeAfterNoonCB" onchange="checkeditTimeAfterNoonCB(this.checked)" />
             </div>
             <div class="text-right modal-footer">
                 <button type="button" onclick="updateRidePatTime()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
