--- a/Road to Recovery/pages/Welcome.html
+++ b/Road to Recovery/pages/Welcome.html
@@ -73,15 +73,8 @@
 
                     </li>
                     <li>
-                        נא להוריד ולהתקין את האפליקציה הסלולרית למתנדב.ת. <br />
-                        אם יש לך טלפון אנדרואיד: <a href="https://play.google.com/store/apps/details?id=il.Road.to.Recovery&hl=en">(הקליק.י פה)</a> <br />
-                        אייפון: גלשו לאפל סטור, הקלידו את שם האפליקציה (בדרך להחלמה) בשורת החיפוש.
-                    </li>
-                    <li>
-                        עם סיום ההתקנה, פתח.י את האפליקציה והגדיר.י את ההעדפות שלך (מאיפה, לאן ומתי להסיע). <br />
-                    </li>
-                    <li>
-                        דף עם תשובות לשאלות נפוצות לגבי השימוש באפליקציה:  <a href="http://www.roadtorecovery.org.il/Site/he/faq.html">(הקליק.י פה)</a>
+                        היכנס.י בבקשה לאתר ההסעות של העמותה בלינק הבא: https://mobile.roadtorecovery.org.il/login
+                        והגדיר.י את ההעדפות שלך (מאיפה, לאן, ומתי להסיע)
                     </li>
                 </ol>
                 <br />
@@ -107,7 +100,7 @@
     <!-- end container -->
     <!-- FOOTER -->
     <footer class="footer text-right">
-        2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+        2023 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
     </footer>
     <!-- End FOOTER -->
     <script>
