--- a/Road to Recovery/pages/Welcome.html
+++ b/Road to Recovery/pages/Welcome.html
@@ -73,8 +73,9 @@
 
                     </li>
                     <li>
-                        היכנס.י בבקשה לאתר ההסעות של העמותה בלינק הבא: https://mobile.roadtorecovery.org.il/login
-                        והגדיר.י את ההעדפות שלך (מאיפה, לאן, ומתי להסיע)
+                        היכנס.י בבקשה לאתר ההסעות של העמותה 
+                        <a href="https://mobile.roadtorecovery.org.il/login">בקישור הזה</a>
+                        והגדיר.י את ההעדפות שלך: מאיפה, לאן, ומתי להסיע
                     </li>
                 </ol>
                 <br />
