--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -219,7 +219,7 @@
                             arr_volunteers[i].LastModified = `${dd}.${mm}.${yyyy} ${time}`;
                         }
 
-                        btnStr += " " + deleteBtn;
+                    //    btnStr += " " + deleteBtn;
                         var Volunteer = {
                             Id: arr_volunteers[i].Id,
                             DisplayName: arr_volunteers[i].DisplayName,
