--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -247,7 +247,7 @@
                             EnglishName: arr_volunteers[i].EnglishName,
                             NumOfRides_last2Months: arr_volunteers[i].NumOfRides_last2Months,
                             MostCommonPath: arr_volunteers[i].MostCommonPath,
-                            // MostCoomonRegionalPath: mostCommonRegionalPath,
+                            NearestBigCity: arr_volunteers[i].NearestBigCity,
                             JoinDate: joinDate,
                         }
                         allVolunteersFromDb.push(Volunteer);
@@ -283,12 +283,13 @@
                             { data: "CellPhone", width: "4%" },                //2
                             { data: "EnglishName", width: "7%" },              //3
                             { data: "City", width: "4%" },                     //4
-                            { data: "Remarks", width: "14%" },                 //5
-                            { data: "LastModified", width: "8%" },             //6
-                            { data: "NumOfRides_last2Months", width: "4%" },   //7
-                            { data: "MostCommonPath", width: "8%" },           //8
-                            { data: "JoinDate", width: "8%" },                 //9
-                            { data: "Buttons", width: "22%" },                 //10
+                            { data: "NearestBigCity", width: "4%" },            //5
+                            { data: "Remarks", width: "14%" },                 //6
+                            { data: "LastModified", width: "8%" },             //7
+                            { data: "NumOfRides_last2Months", width: "4%" },   //8
+                            { data: "MostCommonPath", width: "8%" },           //9
+                            { data: "JoinDate", width: "8%" },                 //10
+                            { data: "Buttons", width: "15%" },                 //11
                         ],
                     });
 
@@ -621,6 +622,7 @@
                                             <th>טלפון</th>
                                             <th>שם באנגלית</th>
                                             <th>יישוב</th>
+                                            <th>עיר גדולה קרובה</th>
                                             <th style="text-align:right">הערות</th>
                                             <th>עודכן לאחרונה</th>
                                             <th>מס' הסעות בחודשיים אחרונים</th>
