adding maping to a nearest city

--- a/Road to Recovery/pages/cities.html
+++ b/Road to Recovery/pages/cities.html
@@ -35,8 +35,8 @@
         <div>
             <p>Read all the cities from the database</p>
             <select id="rewrite">
-                <option value="false">get only cities without coordinates</option>
-                <option value="true">get all cities</option>
+                <option value="true">get only cities without coordinates</option>
+                <option value="false">get all cities</option>
             </select>
             <button id="readCitiesBTN"> Get Cities from the DB </button>
             <div id="ph"></div>
@@ -50,7 +50,6 @@
             <p id="counter"></p>
             <p id="updateMessage"></p>
         </div>
-
 
         <div>
             <p>Errors:</p>
